--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "@angular/platform-browser-dynamic": "5.2.11",
     "@ionic-native/camera": "^4.19.0",
     "@ionic-native/core": "~4.18.0",
+    "@ionic-native/dialogs": "^4.19.0",
     "@ionic-native/splash-screen": "~4.18.0",
     "@ionic-native/status-bar": "~4.18.0",
-    "@ionic/storage": "2.2.0",
+    "@ionic/storage": "^2.2.0",
     "cordova-plugin-camera": "4.0.3",
+    "cordova-plugin-dialogs": "2.0.1",
+    "cordova-sqlite-storage": "2.6.0",
     "hasha": "^3.0.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
@@ -40,7 +43,9 @@
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "cordova-plugin-camera": {}
+      "cordova-plugin-camera": {},
+      "cordova-plugin-dialogs": {},
+      "cordova-sqlite-storage": {}
     }
   }
 }
